# architecture-of-database-systems-project

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  times.ods
dexter/: IXServer.c  IX_Byte.c  IndexDictionary.c  IndexDictionary.h  L2List.c  TXManager.c  TXManager.h
driver/: Test.c  unittests.c  vary_low.c
memdb/: Cargo.toml
memdb-bindings/: Cargo.toml
memdb-bindings/src/: lib.rs
memdb/src/: lib.rs
reference/: readme  server.h
reference/driver/: Custom.c  Test.c  double_lookup.c  phantom_test.c  speed_test.c  vary_high.c
reference/src/: IXStruct.h  IX_Byte.h  L2List.h  makefile
src/: L0Item.cpp  L0Item.h  L0Tree.cpp  L0Tree.h  L1Item.cpp  L1Item.h  L2Item.cpp  L2Item.h  MemDB.cpp  MemDB.h  Spinlock.h  Transaction.h  Tree.cpp  Tree.h  bitutils.h  lib.rs  memdb_server.cpp  memdb_server.h  server.cpp  server.h  server.rs  types.h
test/: main.cpp  test.cpp
